# fullstack-with-python

./: README.md
backend/: .env.dev  .flake8  .gitignore  alembic.ini  dev.py  pyproject.toml  readme.md  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  logging.py  main.py  models.py  routes.py
backend/app/auth/: models.py  routes.py  service.py
backend/app/database/: core.py
backend/app/database/revisions/core/: env.py
backend/app/database/revisions/core/versions/: 67d3b7aad3fa_add_is_active_to_user_model.py  7bbe91b77fbe_add_menus.py  847df2b84f5c_test.py  b034f68881a2_add_menus.py
backend/app/menu/: models.py  routes.py  schemas.py
backend/app/services/: redis_service.py
backend/app/user/: routes.py  schemas.py  services.py
react-frontend/: .env.dev  .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.ts
react-frontend/src/: App.tsx  AppContext.tsx  AuthContext.tsx  config.ts  index.css  main.tsx
react-frontend/src/api/: dashboard.ts  user.ts
react-frontend/src/hoc/: withInitialState.tsx
react-frontend/src/layout/: Layout.tsx  LayoutContent.tsx  LayoutHeader.tsx  LayoutSidebar.tsx  Menu.tsx  menus.tsx
react-frontend/src/router/: index.tsx
react-frontend/src/stores/: menus.ts
react-frontend/src/utils/: auth.ts  request.ts  token.ts
react-frontend/src/views/: Login.tsx  User.tsx
vue-frontend/: package-lock.json  package.json  vite.config.ts
vue-frontend/src/: App.vue  main.ts
vue-frontend/src/api/: auth.ts
vue-frontend/src/layout/: Layout.vue
vue-frontend/src/router/: index.ts
(+17 files in other folders)
